[package]
name = "qlog"
version = "0.1.0"
edition = "2021"

[dependencies]

# logging
log = "0.4"
env_logger = "0.11"

# gui and async runtime
egui = "0.27"
egui_extras = "0.27"
egui_dock = { version = "0.12", features = ["serde"] }
eframe = { version = "0.27", features = ["persistence"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync"] }

# data
surrealdb = { version = "1.4", features = ["kv-rocksdb"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
geoutils = "0.5"

# qol macros
strum = "0.26"
strum_macros = "0.26"
lazy_static = "1.4"

# web requests and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
reqwest = { version = "0.12", features = ["json"] }

# memory allocator
mimalloc = "*"
